# laika_mpc

./: CMakeLists.txt.user.a20aaf4  README.md
elevation_mapping/elevation_mapping/src/: ElevationMap.cpp  ElevationMapping.cpp  RobotMotionMapUpdater.cpp
elevation_mapping/elevation_mapping_demos/launch/: my_robot_camera.launch  my_robot_lidar.launch
laikago_ros/laikago_controller/: CMakeLists.txt
laikago_ros/laikago_controller/src/: joint_controller.cpp
laikago_ros/laikago_real/: CMakeLists.txt
laikago_ros/laikago_real/launch/: laikago_reset.launch  laikago_show.launch
laikago_ros/laikago_real/src/: position_mode.cpp  position_reset.cpp  robotState.cpp
laikago_sdk/: CMakeLists.txt
quadruped_locomotion/balance_controller/: CMakeLists.txt  controller_plugin_descriptions.xml  package.xml  plugin_descriptions.xml
quadruped_locomotion/balance_controller/cfg/: controller_gains.cfg
quadruped_locomotion/balance_controller/config/: control22.yaml  control_laikago.yaml  controller_gains.yaml  controller_gains_gazebo.yaml
quadruped_locomotion/balance_controller/launch/: controller_spawn.launch
quadruped_locomotion/laikago_robcogen/: CMakeLists.txt  package.xml
quadruped_locomotion/laikago_ros_control/: CMakeLists.txt  laikago_hw_plugin.xml  package.xml
quadruped_locomotion/pronto_laikago_commons/: CMakeLists.txt  package.xml
quadruped_locomotion/quadruped_odom/: CMakeLists.txt
ros_ethercat/ros_ethercat_driver/: CMakeLists.txt
simple_dog_simulation/sim_assiants/: CMakeLists.txt  package.xml
wbc/: CMakeLists.txt  package.xml
wbc/launch/: dog.urdf.rviz.launch
wbc/model/: RobotModel.cpp
wbc/src/: MAIN.cpp
wbc/urdf/: aliengo.urdf  aliengo_description.gv  laikago.urdf  laikago_description.gv
xbox360_controller_interface/src/: joy_wheel_control.cpp
(+145 files in other folders)
